--- a/CustomerCorner.html
+++ b/CustomerCorner.html
@@ -968,7 +968,7 @@ footer.copyright a{
     <div class="main-wrapper">
         <div class="nav-background">
             <div class="mobile-logo">
-                <h1>Agro-Aspire</h1>
+                <h1>KrishiSahayak</h1>
             </div>
             <div class="mobile-nav">
                 <div class="cart">
@@ -1092,7 +1092,7 @@ footer.copyright a{
                             
                             
                         </div>
-                        <h1>Welcome to <span>Agro-Aspire</span> </h1>
+                        <h1>Welcome to <span>KrishiSahayak</span> </h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the
                             industry's standard dummy.</p>
@@ -1212,7 +1212,7 @@ footer.copyright a{
                                 <img src="images/group.png" alt="">
                             </div>
                             <div class="flex-1">
-                                <h2>Agro-Aspire</h2>
+                                <h2>KrishiSahayak</h2>
                                 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
                                     piece of
                                     classical Latin literature from 45 BC, making it over 2000 years old. Richard
