--- a/foods.html
+++ b/foods.html
@@ -30,7 +30,7 @@
 
   nav .logo {
     color: #fff;
-    font-size: 25px;
+    font-size: 22px;
     font-weight: 600;
     margin-left: -80px;
   }
@@ -517,7 +517,7 @@ fieldset{
     <!-- Navbar Section Starts Here -->
     <section>
         <nav>
-          <div class="logo">Agro-Aspire</div>
+          <div class="logo">KrishiSahayak</div>
           <input type="checkbox" id="click">
           <label for="click" class="menu-btn">
             <i class="fas fa-bars"></i>
