--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     nav .logo {
       color: #fff;
-      font-size: 25px;
+      font-size: 22px;
       font-weight: 600;
       margin-left: -80px;
     }
@@ -407,7 +407,7 @@
 
   <section>
     <nav>
-      <div class="logo">Agro-Aspire</div>
+      <div class="logo">KrishiSahayak</div>
       <input type="checkbox" id="click">
       <label for="click" class="menu-btn">
         <i class="fas fa-bars"></i>
@@ -486,7 +486,7 @@
 </div>
 
 <div class="yup">
-  <img src="images/back4.png" class="yuppy">
+  <img src="images/back44.png" class="yuppy">
 </div>
 
 
