--- a/news.html
+++ b/news.html
@@ -30,7 +30,7 @@
     <nav class="nav">
         <div class="nav-menu flex-row">
             <div class="nav-brand">
-                <a href="#" class="text-gray">Agro-Aspire</a>
+                <a href="#" class="text-gray">KrishiSahayak</a>
             </div>
             <div class="toggle-collapse">
                 <div class="toggle-icons">
