--- a/Aquaculture.html
+++ b/Aquaculture.html
@@ -29,7 +29,7 @@
 
     nav .logo {
       color: #fff;
-      font-size: 25px;
+      font-size: 22px;
       font-weight: 600;
       margin-left: -80px;
     }
@@ -432,7 +432,7 @@
 <body>
     <section>
         <nav>
-          <div class="logo">Agro-Aspire</div>
+          <div class="logo">KrishiSahayak</div>
           <input type="checkbox" id="click">
           <label for="click" class="menu-btn">
             <i class="fas fa-bars"></i>
