--- a/NGO&Corporate.html
+++ b/NGO&Corporate.html
@@ -36,7 +36,7 @@
 
     nav .logo {
       color: #fff;
-      font-size: 25px;
+      font-size: 22px;
       font-weight: 600;
       margin-left: -80px;
     }
@@ -307,7 +307,7 @@ h5 {
 
   <section>
     <nav>
-      <div class="logo">Agro-Aspire</div>
+      <div class="logo">KrishiSahayak</div>
       <input type="checkbox" id="click">
       <label for="click" class="menu-btn">
         <i class="fas fa-bars"></i>
